--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bs4>=0.0.2",
+    "emoji>=2.14.0",
+    "openai>=1.51.2",
+    "pandas>=2.2.3",
     "pydantic>=2.9.2",
     "pymysql>=1.1.1",
     "python-dotenv>=1.0.1",
     "sqlalchemy>=2.0.35",
     "streamlit>=1.39.0",
+    "tiktoken>=0.8.0",
 ]
