feat: editando texto de noticia a partir de um modal

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pymysql>=1.1.1",
     "python-dotenv>=1.0.1",
     "sqlalchemy>=2.0.35",
+    "streamlit-modal>=0.1.2",
     "streamlit>=1.39.0",
     "tiktoken>=0.8.0",
 ]
