--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "emoji>=2.14.0",
     "openai>=1.51.2",
     "pandas>=2.2.3",
+    "playwright>=1.48.0",
     "pydantic>=2.9.2",
     "pymysql>=1.1.1",
     "python-dotenv>=1.0.1",
