--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.13.3",
     "bs4>=0.0.2",
     "emoji>=2.14.0",
     "openai>=1.51.2",
@@ -14,6 +15,7 @@ dependencies = [
     "pymysql>=1.1.1",
     "python-dotenv>=1.0.1",
     "sqlalchemy>=2.0.35",
+    "streamlit-authenticator>=0.4.1",
     "streamlit-modal>=0.1.2",
     "streamlit>=1.39.0",
     "tiktoken>=0.8.0",
