--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "bcrypt>=4.2.0",
     "bs4>=0.0.2",
     "emoji>=2.14.0",
+    "feedparser>=6.0.11",
     "openai>=1.51.2",
     "pandas>=2.2.3",
     "playwright>=1.48.0",
@@ -21,6 +22,7 @@ dependencies = [
     "streamlit-authenticator>=0.4.1",
     "streamlit-cookies-controller>=0.0.4",
     "streamlit-modal>=0.1.2",
+    "streamlit-tags>=1.2.8",
     "streamlit>=1.39.0",
     "tiktoken>=0.8.0",
 ]
