feat: tela para publicar noticias

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,5 @@ dependencies = [
     "tiktoken>=0.8.0",
     "trafilatura>=2.0.0",
     "xmltodict>=0.14.2",
+    "mysql-connector-python>=9.3.0",
 ]
